--- a/barn_quilt_web_interface/index.html
+++ b/barn_quilt_web_interface/index.html
@@ -13,7 +13,7 @@
     }
   </style>
   <script src="p5.js"></script>
-  <script src="matrix_math.js"></script>
+  <script src="half_square_triangle_matrix.js"></script>
 </head>
 
 <body>
