--- a/barn_quilt_web_interface/index.html
+++ b/barn_quilt_web_interface/index.html
@@ -14,6 +14,8 @@
   </style>
   <script src="p5.js"></script>
   <script src="half_square_triangle_matrix.js"></script>
+  <script src="picker.min.js"></script>
+  <link href="picker.min.css" rel="stylesheet"/>
 </head>
 
 <body>
